syntax = 'proto3';

import "common.message.proto";
import "property.models.proto";

message QueryAttributeTypeRequest {
    QueryBuilder queryBuilder = 1;
    optional string search = 2;
    optional string organizationId = 3;
    optional bool includeVoided = 4;
}

message QueryAttributeTypeResponse {
    repeated AttributeType data = 1;
    map<string, string> metadata = 2; 
}

message CreateAttributeTypeRequest {
    QueryBuilder queryBuilder = 1;
    string name = 2;
    optional string organizationId = 3;
    Icon icon = 4;
}
message UpdateAttributeTypeRequest {
    QueryBuilder queryBuilder = 1;
    optional string name = 2;
    optional Icon icon = 3;
    string id = 4;
}
message GetAttributeTypeRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
}
message GetAttributeTypeResponse {
    AttributeType data = 1;
    map<string, string> metadata = 2; 
}
message DeleteAttributeTypeRequest {
    QueryBuilder queryBuilder = 1;
    string id = 2;
    optional bool purge = 3;
}